--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -468,7 +468,7 @@ color: #f91515;
 	padding: 8px 15px;
 	font-weight: 600;
 	text-transform: uppercase;
-	background: #00CBFF;
+	background: #f91515;
 	top: 0;
 	left: 0px;
 	right: 0px;
