--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -455,7 +455,7 @@ text-align: right;
     margin-top: 50px;
 }
 .Neu{
-color: #f91515;
+color: #c1a777;
     font-size: 40px;   
     font-weight: bold;
    margin-top: 160px;
@@ -468,7 +468,7 @@ color: #f91515;
 	padding: 8px 15px;
 	font-weight: 600;
 	text-transform: uppercase;
-	background: #f91515;
+	background: #c1a777;
 	top: 0;
 	left: 0px;
 	right: 0px;
@@ -483,7 +483,7 @@ color: #f91515;
         margin-bottom: 60px;
 }
 .coming span{
-color: #f91515;
+color: #c1a777;
     font-size: 40px;
 }
 
