--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -382,7 +382,7 @@ font-weight: bold;
 	font-size: 22px;
 }
 .tm_social_media a:hover {
-	background: #FFF;
+	background: #c1a777;
 	color: #000;
 }
 /*========================================
