--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -383,7 +383,7 @@ font-weight: bold;
 }
 .tm_social_media a:hover {
 	background: #c1a777;
-	color: #000;
+	color: #fff;
 }
 /*========================================
 	Footer Css END
